--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmls:th="http://www.thymeleaf.org">
     <head th:replace="layout/plantilla :: head">
     </head>
     <body>
         <header th:replace=layout/plantillas :: header" />
-        
+        <section th:replace="categoria/fragmentos :: botonesAgregar"/>
+        <section th:replace="categoria/fragmentos :: agregarCategoria"/>
+        <section th:replace="categoria/fragmentos :: listadoCategorias"/>
         <footer th:replace=layout/plantillas :: footer" />
     </body>
 </html>
