semana6 mitad / se hace este commit para guardar datos realizados por error que esta dando sobre que no me crea una carpeta por defecto, para poder proceder a desintalar y volver a instaalar y ver si se puede arreglar mientras se espera la solucion del profesor /

--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -4,16 +4,16 @@
     font-family: Comic Sans MS;
 }
 .PARRAFOSejemplo{
-    color : greenyellow;
+    color : teal;
     font-weight: bold;
     
 }
 .parrafoSecundario{
-    color : yellow;
-    font-size: 20px;
+    color : graytext;
+    font-size: 15px;
     font-weight: bold;
 }
 p{
-    Color: brown;
-    font-size: 15px;
+    Color: blue;
+    font-size: 10px;
 }
