--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmls:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+      xmlns:th="http://www.thymeleaf.org">
+
     <head th:replace="layout/plantilla :: head">
-    </head>
-    <body>
-        <header th:replace=layout/plantillas :: header" />
-        
-        <footer th:replace=layout/plantillas :: footer" />
-    </body>
-</html>
+        <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                </head>
+                <body>
+                    <header th:replace="layout/plantilla :: header"/>
+                    <footer th:replace="layout/plantilla :: footer"/>
+                </body>
+                </html>
